Fixed home grid right extra margin

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -49,3 +49,7 @@ mat-card:hover{
   transform: scale(1.2);
   transition: 500ms;
 }
+
+.remove-right-padding{
+  margin-right: 0;
+}
